--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - ${MYSQL_PORT}:${MYSQL_PORT}
     volumes:
+      - ./databases.sql:/docker-entrypoint-initdb.d/databases.sql
       - mysqldb_volume:/var/lib/mysql
     networks:
       - mysqldb_network
