--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:db": "docker compose up -d",
-    "stop:db": "docker compose down"
+    "db:start:dev": "docker compose --env-file ./.env.development up -d",
+    "db:stop:dev": "docker compose --env-file ./.env.development down",
+    "db:start:test": "docker compose --env-file ./.env.test up -d",
+    "db:stop:test": "docker compose --env-file ./.env.test down",
+    "db:start:prod": "docker compose --env-file ./.env.production up -d",
+    "db:stop:prod": "docker compose --env-file ./.env.production down",
+    "api:start:dev": "NODE_ENV=development nx serve server-api",
+    "api:start:test": "NODE_ENV=test nx serve server-api",
+    "api:start:prod": "NODE_ENV=production nx serve server-api"
   },
   "private": true,
   "devDependencies": {
@@ -23,6 +30,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
@@ -53,10 +61,14 @@
   },
   "dependencies": {
     "axios": "^1.0.0",
+    "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "express": "^4.18.1",
+    "mysql2": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3",
+    "sequelize": "^6.28.0",
     "tslib": "^2.3.0"
   }
 }
